--- a/scss/Banner.scss
+++ b/scss/Banner.scss
@@ -1,3 +1,62 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+/* ----- text defaults ----- */
+body {
+  color: rgb(140, 140, 142);
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-smooth: subpixel-antialiased;
+}
+
+/* ----- title defaults ----- */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  color: rgb(250, 250, 252);
+  margin-bottom: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
+  font-size: 52px;
+  font-weight: 800;
+}
+
+h4 {
+  font-size: 17px;
+  font-weight: 600;
+}
+
+h5 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+h6 {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+/* ----- text config ----- */
+.art-sm-text {
+  font-size: 11px;
+}
+
+.art-lg-text {
+  font-size: 16px;
+}
+
+.art-white {
+  color: rgb(250, 250, 252);
+}
+
+
 .art-top-bg {
     overflow: hidden;
     position: absolute;
@@ -292,14 +351,109 @@ space
 /* ----- text config ----- */
 
 .art-sm-text {
-    font-size: 11px;
+    font-size: 10px;
+    color: white;
   }
   
   .art-lg-text {
     font-size: 16px;
+    font-weight: medium;
+    color: white;
+    margin-left: 40px;
   }
   
   .art-white {
     color: rgb(250, 250, 252);
+  }
+  .art-lg-text {
+    display: inline-block;
+    transform: rotate(1800deg);
+    transform-origin: left top 0;
+  }
+  
+  .txt-rotate {
+    color: #f5de14;
+  }
+
+  /* ------------------------------
+
+link
+
+------------------------------ */
+.art-link {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 10px;
+    display: inline-block;
+    letter-spacing: 1.5px;
+    font-weight: 600;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    color: rgb(140, 140, 142);
+    transition: 0.4s ease-in-out;
+  }
+  .art-link:hover {
+    color: rgb(250, 250, 252);
+    text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
+  }
+  .art-link.art-white-link {
+    color: rgb(250, 250, 252);
+  }
+  .art-link.art-white-link:hover {
+    color: rgb(250, 250, 252);
+    text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
+    transform: translateX(5px);
+  }
+  .art-link.art-color-link {
+    color: #FFC107;
+  }
+  .art-link.art-color-link:hover {
+    color: #FFC107;
+    text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
+    transform: translateX(5px);
+  }
+  .art-link.art-w-chevron {
+    padding-right: 10px;
+  }
+  .art-link.art-w-chevron:after {
+    position: absolute;
+    font-family: "Font Awesome 5 free";
+    content: "\f054";
+    font-weight: 900;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-size: 9px;
+    top: 0.3px;
+    transform: translateX(5px);
+    transition: 0.4s ease-in-out;
+  }
+  .art-link.art-w-chevron:hover {
+    transform: translateX(0);
+  }
+  .art-link.art-w-chevron:hover:after {
+    transform: translateX(10px);
+  }
+  .art-link:last-child {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
+  .art-link i {
+    font-size: 9px;
+    margin-left: 3px;
+  }
+  .art-link.art-left-link {
+    padding-left: 10px;
+    padding-right: 0;
+  }
+  .art-link.art-left-link.art-w-chevron:after {
+    content: "\f053";
+    left: 0;
+    transform: translateX(0);
+  }
+  .art-link.art-left-link.art-w-chevron:hover:after {
+    transform: translateX(-5px);
   }
   
